# ERP-Server

./: .gitignore  Dockerfile  demonstrate_rbac.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
erp_backend/: apps.py  permissions.py  serializers.py  settings.py  signals.py  tests.py  urls.py  views.py
erp_backend/management/commands/: init_erp_data.py
purchase/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
purchase/migrations/: 0001_initial.py
sales/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  views.py
sales/management/: __init__.py
sales/management/commands/: __init__.py  seed_customers.py  seed_invoices.py
sales/migrations/: 0001_initial.py  0002_rename_customer_name.py  0003_alter_customer_options_customer_address_and_more.py  0004_alter_customer_phone.py  0005_salesinvoice_payment_method_and_more.py  0006_rename_product_name_salesitem_item_name_and_more.py  0007_alter_customer_options_customer_created_at_and_more.py
